# yt-dlp-gui

./: .gitignore  LICENSE  README.md  pyproject.toml
src/yt_dlp_gui/: __init__.py  logic.py  main.py  rc_resources.py  resources.qrc
src/yt_dlp_gui/mvc/: download_contoller.py  download_processor.py  search_worker.py  url_store.py
src/yt_dlp_gui/ui/: actions.py  buttons.py  directory_picker.py  input_section.py  main_ui.py  mode_button.py  progress_bar.py  selection_menu.py  video_list.py
src/yt_dlp_gui/ui/themes/: engine.py  globals.json  input_section.qss  main.qss  selection_menu.qss  variables_dark.json  variables_light.json
src/yt_dlp_gui/utils/: models.py  utils.py
