[project]
name = "yt-dlp-gui"
version = "0.1.0"
description = "Easy GUI for yt-dlp"
license = {text = "MIT"}
requires-python = ">=3.13, <3.15"
dependencies = [
    "yt-dlp (>=2026.1.31,<2027.0.0)",
    "pyside6 (>=6.10.1,<7.0.0)",
    "mutagen (>=1.47.0,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
packages = [{include = "yt_dlp_gui", from = "src"}]

[dependency-groups]
dev = [
    "ruff (>=0.14.14,<0.15.0)",
]

[tool.poetry.scripts]
yt-gui = "yt_dlp_gui.main:main_app"

[tool.ruff]
exclude = ["tests"]
line-length = 130

[tool.ruff.lint]
select=["ALL"]
ignore=["D", "W292", "I001"]
